# GradientShop

./: CMakeLists.txt  GradientShop.cpp  README.md
src/: common.h  filter.cpp  filter.h  gradientShop.cpp  gradientshop.h  main.cpp  matrixoper.cpp  matrixoper.h  npr_filter.cpp  npr_filter.h  opencv.h  sharpen_filter.cpp  sharpen_filter.h  sparsematrix.h
