cmake_minimum_required(VERSION 2.8)
project( GradientShop )
find_package( OpenCV )
file(GLOB_RECURSE GradientShop_SOURCES "src/*.cpp")
file(GLOB_RECURSE GradientShop_HEADERS "src/*.h")
set (GradientShop_INCLUDE_DIRS "")
foreach (_headerFile ${GradientShop_HEADERS})
    get_filename_component(_dir ${_headerFile} PATH)
    list (APPEND GradientShop_INCLUDE_DIRS ${_dir})
endforeach()
list(REMOVE_DUPLICATES GradientShop_INCLUDE_DIRS)
include_directories(${GradientShop_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( GradientShop ${GradientShop_SOURCES} )
target_link_libraries( GradientShop ${OpenCV_LIBS} )

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
